# local-function-calling

./: .env.example  .exampleenv  .gitignore  Makefile  README.md  function_caller.py  function_map.py  functionality.py  helpers.py  inference.py  main.py  pyproject.toml  run.py  runner.py  status.py
.run/: main.run.xml
data/: few_shots.json  set.json  set_native.json
evals/: fail.py  regular.py
functions/: __init__.py  dates.py  get_time.py  location.py  math.py  search.py  text.py  weather.py
prompts/: docstring_parser.ptpl  functions.j2  functions.ptpl  json_extract.ptpl  select_function.ptpl
