[tool.poetry]
name = "local-function-calling"
version = "0.1.0"
description = ""
authors = ["Jose Berrio <aldarisbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
jinja2 = "^3.1.2"
llama-cpp-python = "^0.2.11"
python-dotenv = "^1.0.0"
uszipcode = "^1.0.1"
wandb = "^0.15.12"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

