[tool.poetry]
name = "local-function-calling"
version = "0.1.0"
description = ""
authors = ["Jose Berrio <aldarisbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
uszipcode = "^1.0.1"
wandb = "^0.16.6"
pandas = "^2.2.2"
python-levenshtein = "^0.23.0"
llama-cpp-python = "0.2.52"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

